--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "d3": "^5.7.0",
     "smartdok-sunshine": "smartdok/sunshine#master",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/d3": "^5.0.0",
