--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "highlight.js": "^9.14.1",
     "smartdok-sunshine": "smartdok/sunshine#master",
     "vue": "^2.5.17",
+    "vue-highlight-component": "^1.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
