--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "smartdok-sunshine": "smartdok/sunshine#master",
     "vue": "^2.6.6",
     "vue-highlight-component": "^1.0.0",
+    "vue-i18n": "^8.9.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
