--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "surge -d smartdok-sunshine.surge.sh dist"
   },
   "dependencies": {
+    "async-mutex": "^0.1.3",
     "d3": "^5.9.1",
     "highlight.js": "^9.14.2",
     "moment": "^2.24.0",
