--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "deploy": "surge -d smartdok-sunshine.surge.sh dist"
+    "deploy": "surge -d smartdok-sunshine.surge.sh dist",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "async-mutex": "^0.1.3",
@@ -27,11 +27,18 @@
     "@types/dom-inputevent": "^1.0.4",
     "@types/jest": "^24.0.6",
     "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-plugin-typescript": "^3.4.1",
     "@vue/cli-plugin-unit-jest": "^3.4.1",
     "@vue/cli-service": "^3.4.1",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "lint-staged": "^8.1.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "ts-jest": "^24.0.0",
@@ -47,5 +54,14 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
