--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async-mutex": "^0.1.3",
     "d3": "^5.9.1",
     "highlight.js": "^9.14.2",
+    "locize-editor": "^1.7.0",
     "locizer": "^1.3.0",
     "moment": "^2.24.0",
     "smartdok-sunshine": "smartdok/sunshine#v0.10.0",
