Fix TypeScript yelling about $class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       "scripthost"
     ]
   },
+  "files": [
+    "node_modules/smartdok-sunshine/src/shims-classHelper.d.ts"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
