--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "highlight.js": "^9.14.2",
     "locize-editor": "^1.7.0",
     "locizer": "^1.3.0",
-    "moment": "^2.24.0",
+    "luxon": "^1.15.0",
     "smartdok-sunshine": "smartdok/sunshine#v0.13.0",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
@@ -29,6 +29,7 @@
     "@types/debounce": "^3.0.0",
     "@types/dom-inputevent": "^1.0.4",
     "@types/jest": "^24.0.6",
+    "@types/luxon": "^1.13.0",
     "@vue/cli-plugin-babel": "^3.4.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-plugin-typescript": "^3.4.1",
