--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "surge -d smartdok-sunshine.surge.sh dist",
+    "deploy": "cross-var az storage blob upload-batch --account-name sunshinedemo -s dist -d \\$web",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
     "locize-editor": "^1.7.0",
     "locizer": "^1.3.0",
     "luxon": "^1.15.0",
-    "smartdok-sunshine": "smartdok/sunshine#v1.1.0",
+    "smartdok-sunshine": "^1.7.4",
     "v-tooltip": "2.0.2",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
@@ -27,9 +27,9 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.1",
-    "@types/debounce": "^3.0.0",
     "@types/dom-inputevent": "^1.0.4",
     "@types/jest": "^24.0.6",
+    "@types/lodash": "^4.14.136",
     "@types/luxon": "^1.13.0",
     "@vue/cli-plugin-babel": "^3.4.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
