--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "cross-var az storage blob upload-batch --account-name sunshinedemo -s dist -d \\$web",
+    "deploy": "az storage blob upload-batch --account-name sunshinedemo -s dist -d \\$web",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
